Fixing bug 283897. Make midas state survive document.open/write/close. Regression from bug 283897.  r=brade@comcast.net, sr=bzbarsky@mit.edu